# WizCoin

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py
src/wizcoin/: __init__.py
